--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -5,6 +5,8 @@ defaults:
   - dataset: default
   - model/generator: demucs
   - loss: default
+  - override hydra/sweeper: optuna
+  - override hydra/sweeper/sampler: tpe
 
 # Training option
 restart: false
@@ -33,6 +35,16 @@ ms_target: 162 # Model size target in MB, when using DiffQ. Best model will be k
 hydra:
   run:
     dir: ../outputs/${now:%Y-%m-%d}/${now:%H-%M-%S}
+  sweep:
+    dir: ../outputs/${now:%Y-%m-%d}/${now:%H-%M-%S}
+  sweeper:
+    sampler:
+      seed: 123
+    direction: maximize
+    study_name: demucs
+    storage: null
+    n_trials: 10
+    n_jobs: 1
 # num:
 #   example1: 1
 #   example2: 2
