--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -46,6 +46,11 @@ hydra:
     storage: null
     n_trials: 10
     n_jobs: 1
+
+# mlflow
+mlflow:
+  tracking_uri: ../out/mlruns
+  experiment_name: music_source_separation
 # num:
 #   example1: 1
 #   example2: 2
