--- a/conf/model/generator/demucs.yaml
+++ b/conf/model/generator/demucs.yaml
@@ -16,3 +16,4 @@ params:
   audio_channels: ${dataset.audio_channels}
   samplerate: ${dataset.samplerate}
   samples: ${dataset.samples}
+grad_norm: -1
