--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -28,6 +28,9 @@ save: false # Save estimated for the test set waveforms
 save_model: false # Skip traning, just save final model for the current checkpoint value.
 save_state: false # Skip training, just save state for the current checkpoint value. You should provide a model name as argument.
 half: false # When saving the model, uses half precision.
+eval_interval: 10
+eval_second: 210
+eval_epoch_path: "../eval.th"
 
 # Quantization options
 q-min-size: 1 # Only quantize layers over this size (in MB)
