--- a/conf/model/generator/demucs.yaml
+++ b/conf/model/generator/demucs.yaml
@@ -15,5 +15,5 @@ params:
   sources: ${dataset.sources}
   audio_channels: ${dataset.audio_channels}
   samplerate: ${dataset.samplerate}
-  samples: ${dataset.samples}
+  sample_seconds: ${dataset.sample_seconds}
 grad_norm: -1
