stft_lossとmag_lossに切り分け

--- a/conf/loss/default.yaml
+++ b/conf/loss/default.yaml
@@ -5,6 +5,14 @@ l1:
 mse:
   lambda: 0
 
+mag:
+  lambda: 0
+  params:
+    fft_sizes: [1024, 2048, 512] # List of FFT size for STFT-based loss.
+    hop_sizes: [120, 240, 50] # List of hop size for STFT-based loss
+    win_lengths: [600, 1200, 240] # List of window length for STFT-based loss.
+    window: "hann_window" # Window function for STFT-based loss
+
 stft:
   lambda: 0
   params:
