--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -16,7 +16,9 @@ repeat: 2
 batch_size: 64
 batch_divide: 1
 lr: 0.0003
-split_valid: false
+shifts: 1
+split_valid: true
+overlap: 0.25
 adversarial_valid_length: 15000000
 pretrained:
 
