--- a/conf/dataset/default.yaml
+++ b/conf/dataset/default.yaml
@@ -17,8 +17,8 @@ sources:
   - vocals
 samplerate: 44100
 audio_channels: 2
-sample_seconds: 10 # 10s
-stride_seconds: 1 # 1s
+segment: 11
+shift: 1
 norm_wav: true
 
 # augument
