demucs(v2)モデルの名称変更

--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -2,7 +2,7 @@ defaults:
   - _self_
   - device: default
   - dataset: default
-  - model/generator: demucs
+  - model/generator: demucs_v2
   - model/discriminator: parallel_wavegan
   - loss: default
   - override hydra/sweeper: optuna
