--- a/conf/loss/default.yaml
+++ b/conf/loss/default.yaml
@@ -34,6 +34,22 @@ mel:
     fmax: 12000
     log_base: null
 
+mfcc:
+  lambda: 0
+  params:
+    sample_rate: 24000
+    n_mfcc: 40
+    dct_type: 2
+    norm: "ortho"
+    log_mels: false
+    melkwargs:
+      n_fft: 2048
+      hop_length: 300
+      win_length: 1200
+      n_mels: 80
+      f_min: 0
+      f_max: 12000
+
 # Adversarial Loss
 adversarial:
   lambda: 0
