--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -29,8 +29,8 @@ save_model: false # Skip traning, just save final model for the current checkpoi
 save_state: false # Skip training, just save state for the current checkpoint value. You should provide a model name as argument.
 half: false # When saving the model, uses half precision.
 save_interval:
-eval_interval: 10
-eval_second: 210
+eval_interval:
+eval_second: 600 # 210
 out: "../out"
 
 # Quantization options
